# aviutl2-catalog

./: .gitignore  CHANGELOG.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  winget.yml
src/: Router.tsx  main.tsx  routePaths.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  paths.rs
src-tauri/src/commands/: archive.rs  diagnostics.rs  download.rs  mod.rs  system.rs  version.rs
src/bootstrap/: useCatalogBootstrap.ts  useGlobalGuards.ts  window.ts
src/components/: ErrorDialog.tsx  PackageNameLink.tsx  ProgressCircle.tsx  RouterFallback.tsx
src/components/package-card/: PackageCard.tsx  PackageCardView.tsx  helpers.ts  types.ts  usePackageCardActions.ts
src/components/package-card/sections/: PackageCardActionSection.tsx  PackageCardMetaSection.tsx  PackageCardThumbnailSection.tsx
src/components/ui/: Button.tsx  _styles.ts
src/features/app-update/: UpdateDialog.tsx  useUpdatePrompt.ts
src/features/deep-link/model/: deepLinkParser.ts
src/features/feedback/model/: constants.ts  helpers.ts  types.ts
src/features/feedback/ui/: FeedbackPage.tsx
src/features/home/ui/: HomePage.tsx  filterIcons.tsx  filterStyles.ts  types.ts
src/features/init-setup/model/: helpers.ts  types.ts
src/features/init-setup/ui/: InitSetupPage.tsx
src/features/links/model/: links.tsx
src/features/links/ui/: LinksPage.tsx
src/features/niconi-commons/model/: types.ts
src/features/package/model/: helpers.ts  types.ts
src/features/package/ui/: PackagePage.tsx  types.ts
src/features/register/model/: au2pkg.ts  build.ts  catalogPatch.ts  constants.ts  draft.ts  factories.ts  form.ts  helpers.ts  installerRules.ts  parse.ts  registerTestRequirement.ts  types.ts  validate.ts
src/features/register/ui/: RegisterPage.tsx  types.ts
src/features/settings/model/: helpers.ts  types.ts
src/features/settings/ui/: SettingsPage.tsx  types.ts
src/features/updates/model/: helpers.ts  types.ts
src/features/updates/ui/: UpdatesPage.tsx  types.ts
src/i18n/: index.ts  react-i18next.d.ts  resources.ts  uiLocale.ts
src/i18n/resources/en/: common.json  feedback.json  home.json  initSetup.json  links.json  nav.json  niconiCommons.json  packageDetail.json  settings.json  updates.json
src/i18n/resources/ja/: common.json  feedback.json  home.json  initSetup.json  links.json  nav.json  niconiCommons.json  packageDetail.json  settings.json  updates.json
src/i18n/resources/ko/: common.json  feedback.json  home.json  initSetup.json  links.json  nav.json  niconiCommons.json  packageDetail.json  settings.json  updates.json
src/i18n/resources/zh-CN/: common.json  feedback.json  home.json  initSetup.json  links.json  nav.json  niconiCommons.json  packageDetail.json  settings.json  updates.json
src/i18n/resources/zh-TW/: common.json  feedback.json  (+8 more)
src/layouts/app-shell/: AppShell.tsx  constants.ts  sidebarConfig.tsx  types.ts
src/lib/: submitEndpoint.ts
src/styles/: index.css
src/utils/: appSettings.ts  catalogSchema.ts  catalogStore.tsx  detectResult.ts  installed-map.ts  invokeIpc.ts  licenseTemplates.ts  markdown.ts  package-update-pause.ts  query.ts  settings.ts  usePackageInstallerActions.ts  usePausedPackageUpdates.ts
src/utils/diagnostics/: collector.ts  types.ts
src/utils/installer/: actions.ts  download.ts  github.ts  install-progress.ts  install-step.ts  install.ts  package-actions.ts  process.ts  shape.ts  types.ts  uninstall.ts
src/utils/markdown-plugins/: alertBlock.ts  detailsBlock.ts  githubLink.ts  highlight.ts  safeHtml.ts
src/utils/package-state/: service.ts  types.ts
(+126 files in other folders)
