[package]
name = "aviutl2-catalog"
version = "0.3.2"
description = "AviUtl2 Catalog"
authors = ["Neosku"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
once_cell = "1"
time = { version = "0.3", features = ["parsing", "formatting"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "gzip", "deflate"] }
url = "2"
thiserror = "2"
arc-swap = "1"
dirs-next = "2"
walkdir = "2"
sevenz-rust2 = "0.20"
memmap2 = "0.9"
memchr = "2"
encoding_rs = "0.8"
percent-encoding = "2"
sysinfo = "0.38"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_Graphics_Gdi",
] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time", "tracing-log"] }
strip-ansi-escapes = "0.2.1"
tauri-plugin-window-state = "2.4.1"
wmi = "0.18.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
