[package]
name = "aviutl2-catalog"
description = "AviUtl2 Catalog"
authors = ["Neosku"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-deep-link = "=2.4.7"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-http = "=2.5.7"
tauri-plugin-process = "=2.3.1"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-single-instance = { version = "=2.4.0", features = ["deep-link"] }
tauri-plugin-updater = "=2.10.0"
tauri-plugin-window-state = "=2.4.1"
anyhow = "1"
arc-swap = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs-next = "2"
encoding_rs = "0.8"
memchr = "2"
memmap2 = "0.9"
once_cell = "1"
percent-encoding = "2"
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust2 = "0.20"
sha2 = "0.10"
strip-ansi-escapes = "0.2"
sysinfo = "0.38"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "tracing-log"] }
url = "2"
walkdir = "2"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_Graphics_Gdi",
] }
wmi = "0.18"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
